<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".ui.EarlyFragment">

    <ScrollView
        android:id="@+id/labelsID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sports"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5C5C5C"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/sports"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/teams"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5C5C5C"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/teams"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/exused"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5C5C5C"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/excused"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#5C5C5C"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/date_colom"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/labelsID"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:background="#BABABA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

