<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SScheduleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="#94504a"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:text="Tennis"
                android:textAlignment="center"
                android:textColor="#cfc3c2"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_tennis"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#94504a"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="Swim"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textAlignment="center"
                android:textColor="#cfc3c2"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:textColor="#ffffff"
                android:textSize="16dp"
                android:text="@string/s_swim" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#94504a"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="Golf"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textAlignment="center"
                android:textColor="#cfc3c2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:text="@string/s_golf" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#94504a"
                android:text="Softball"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textAlignment="center"
                android:textColor="#cfc3c2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:text="@string/s_softball" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#94504a"
                android:text="Baseball"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textAlignment="center"
                android:textColor="#cfc3c2" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:text="@string/s_baseball" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#94504a"
                android:text="Track"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:padding="3dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textAlignment="center"
                android:textColor="#cfc3c2" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:text="@string/s_track" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>